--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.8"
 
 services:
   nginx:
-    image: marcotessari/nginx-hello-world:latest
+    image: ${USERNAME}/${DOCKER_IMAGE}:${IMAGE_TAG}
     ports:
         - "8080:80"
     deploy:
-      mode: replicated
-      replicas: 3
+      mode: global
+      placement:
+        constraints: [node.platform.os == linux]
